--- a/in_development/static/css/glide.theme.css
+++ b/in_development/static/css/glide.theme.css
@@ -87,6 +87,11 @@
   margin: 32px auto 0;
 }
 
+.glide .text-wrapper p:nth-child(2) {
+  font-size: 14px;
+  color: var(--soft-grey);
+}
+
 @media screen and (max-width: 750px) {
   .glide--swipeable {
     cursor: grab;
@@ -97,6 +102,18 @@
     cursor: grabbing;
     cursor: -moz-grabbing;
     cursor: -webkit-grabbing;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .glide__slides {
+    max-height: 300px;
+    height: 100%;
+  }
+
+  .glide__slides .text-wrapper {
+    height: 300px;
+    overflow-y: auto;
   }
 }
 
